Avoid odd overflows.

--- a/css/timer.css
+++ b/css/timer.css
@@ -1,5 +1,10 @@
 @import url('../css/roboto.font.css');
 
+html {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 body, #superContainer {
     text-align: center;
     overflow-y: hidden;
